--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
     "@mui/material": "^5.11.11",
+    "@react-three/drei": "^9.57.3",
     "@react-three/fiber": "^8.12.0",
     "bootstrap": "^5.2.3",
     "react": "^18.2.0",
@@ -25,6 +26,6 @@
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
     "@vitejs/plugin-react": "^3.1.0",
-    "vite": "^4.1.4"
+    "vite": "^4.2.0"
   }
 }
