--- a/package.json
+++ b/package.json
@@ -12,14 +12,17 @@
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
     "@mui/material": "^5.11.11",
+    "@react-three/drei": "^9.57.3",
     "@react-three/fiber": "^8.12.0",
     "bootstrap": "^5.2.3",
+    "buffer": "^6.0.3",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.2",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.8.2",
     "react-three-fiber": "^6.0.13",
-    "three": "^0.150.1"
+    "three": "^0.150.1",
+    "three-stdlib": "^2.21.8"
   },
   "devDependencies": {
     "@types/react": "^18.0.27",
