--- a/package.json
+++ b/package.json
@@ -8,10 +8,13 @@
         "axios": "^1.1.2"
     },
     "dependencies": {
+        "@react-three/drei": "^9.57.3",
         "@vitejs/plugin-react": "^3.1.0",
         "laravel-vite-plugin": "^0.7.4",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
+        "react-three-fiber": "^6.0.13",
+        "three-stdlib": "^2.21.8",
         "vite": "^4.1.4"
     }
 }
